Treinamento/force-app/main/default/objects/Carro__c/fields/Cor__c.field-meta.xml
<CustomField>
    <fullName>Cor__c</fullName>
    <label>Cor</label>
    <length>30</length>
    <type>Text</type>
</CustomField>