Treinamento/force-app/main/default/objects/Carro__c/fields/Ipva2__c.field-meta.xml
<CustomField>
    <fullName>Ipva2__c</fullName>
    <label>Ipva2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>