Treinamento/force-app/main/default/objects/Carro__c/fields/IPVA__c.field-meta.xml
<CustomField>
    <fullName>IPVA__c</fullName>
    <description>Porcentagem do valor do carro a ser pago</description>
    <label>IPVA</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>