Treinamento/force-app/main/default/objects/Carro__c/fields/Proprietario__c.field-meta.xml
<CustomField>
    <fullName>Proprietario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proprietario</label>
    <referenceTo>Proprietario__c</referenceTo>
    <relationshipLabel>Carros</relationshipLabel>
    <relationshipName>Carros</relationshipName>
    <type>Lookup</type>
</CustomField>