Treinamento/force-app/main/default/objects/Carro__c/recordTypes/Vendedor.recordType-meta.xml
<RecordType>
    <fullName>Vendedor</fullName>
    <active>true</active>
    <label>Vendedor</label>
</RecordType>