Treinamento/force-app/main/default/objects/Carro__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Nome__c</columns>
    <columns>Modelo__c</columns>
    <columns>Proprietario__c</columns>
    <columns>Cor__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>